Bug 204267 - REGRESSION (r252497): Multiple mediacapturefromelement tests are crashing on mac debug
Summary: REGRESSION (r252497): Multiple mediacapturefromelement tests are crashing on ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 204232
  Show dependency treegraph
 
Reported: 2019-11-15 17:40 PST by Aakash Jain
Modified: 2019-11-18 10:28 PST (History)
23 users (show)

See Also:


Attachments
Patch (2.07 KB, patch)
2019-11-15 19:15 PST, Chris Dumez
no flags Details | Formatted Diff | Diff
Patch (2.08 KB, patch)
2019-11-15 19:17 PST, Chris Dumez
no flags Details | Formatted Diff | Diff
Patch (4.61 KB, patch)
2019-11-18 08:47 PST, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Aakash Jain 2019-11-15 17:40:30 PST
Multiple mediacapturefromelement tests are crashing on mac debug (mojave, high-sierra, Catalina), e.g.:

fast/mediacapturefromelement/CanvasCaptureMediaStream-2d-events.html
fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track.html
fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html


Build: https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK1%20(Tests)/r252500%20(6925)/results.html

Flakiness dashboard:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fmediacapturefromelement%2FCanvasCaptureMediaStream-clone-track.html&test=fast%2Fmediacapturefromelement%2FCanvasCaptureMediaStream-creation.html&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-AV-audio-video-dataavailable.html


Seems to be regression between r252500 and r252497. Probably https://trac.webkit.org/changeset/252500/webkit
Comment 1 Alexey Proskuryakov 2019-11-15 19:00:56 PST
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   com.apple.JavaScriptCore      	0x000000010bca5db0 WTFCrash + 16 (Assertions.cpp:305)
1   com.apple.WebCore             	0x000000011bb76b3b WTFCrashWithInfo(int, char const*, char const*, int) + 27
2   com.apple.WebCore             	0x000000011de910f8 WebCore::ActiveDOMObject::assertSuspendIfNeededWasCalled() const + 104 (ActiveDOMObject.cpp:102)
3   com.apple.WebCore             	0x000000011e0db9b4 WebCore::ScriptExecutionContext::checkConsistency() const + 820
4   com.apple.WebCore             	0x000000011e0dc9e0 WebCore::ScriptExecutionContext::canSuspendActiveDOMObjectsForDocumentSuspension(WTF::Vector<WebCore::ActiveDOMObject*, 0ul, WTF::CrashOnOverflow, 16ul>*) + 32 (ScriptExecutionContext.cpp:227)
5   com.apple.WebCore             	0x000000011e2cc050 WebCore::canCacheFrame(WebCore::Frame&, WebCore::DiagnosticLoggingClient&, unsigned int) + 3504 (BackForwardCache.cpp:165)
Comment 2 Radar WebKit Bug Importer 2019-11-15 19:02:04 PST
<rdar://problem/57248130>
Comment 3 Chris Dumez 2019-11-15 19:09:01 PST
Looks like somebody forgot to call SuspendIfNeeded() for an ActiveDOMObject.
Comment 4 Chris Dumez 2019-11-15 19:10:07 PST
(In reply to Aakash Jain from comment #0)
> Multiple mediacapturefromelement tests are crashing on mac debug (mojave,
> high-sierra, Catalina), e.g.:
> 
> fast/mediacapturefromelement/CanvasCaptureMediaStream-2d-events.html
> fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track.html
> fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html
> 
> 
> Build:
> https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK1%20(Tests)/
> r252500%20(6925)/results.html
> 
> Flakiness dashboard:
> https://results.webkit.org/?suite=layout-tests&suite=layout-
> tests&suite=layout-
> tests&test=fast%2Fmediacapturefromelement%2FCanvasCaptureMediaStream-clone-
> track.html&test=fast%2Fmediacapturefromelement%2FCanvasCaptureMediaStream-
> creation.html&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-AV-audio-video-
> dataavailable.html
> 
> 
> Seems to be regression between r252500 and r252497. Probably
> https://trac.webkit.org/changeset/252500/webkit

It cannot be https://trac.webkit.org/changeset/252500/webkit
Comment 5 Alexey Proskuryakov 2019-11-15 19:11:06 PST
Actually, this is almost certainly r252497. Which was itself a fix for assertion failures.
Comment 6 Chris Dumez 2019-11-15 19:12:03 PST
(In reply to Alexey Proskuryakov from comment #5)
> Actually, this is almost certainly r252497. Which was itself a fix for
> assertion failures.

Looking now.
Comment 7 Chris Dumez 2019-11-15 19:15:13 PST
Created attachment 383680 [details]
Patch
Comment 8 Chris Dumez 2019-11-15 19:17:44 PST
Created attachment 383681 [details]
Patch
Comment 9 WebKit Commit Bot 2019-11-15 21:45:20 PST
Comment on attachment 383681 [details]
Patch

Clearing flags on attachment: 383681

Committed r252524: <https://trac.webkit.org/changeset/252524>
Comment 10 WebKit Commit Bot 2019-11-15 21:45:21 PST
All reviewed patches have been landed.  Closing bug.
Comment 11 Truitt Savell 2019-11-18 08:34:01 PST
It looks like fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html
and fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track.html are still crashing
Comment 12 Chris Dumez 2019-11-18 08:34:34 PST
(In reply to Truitt Savell from comment #11)
> It looks like
> fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html
> and fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track.html
> are still crashing

Odd, will look now although it would help to get a link.
Comment 14 Chris Dumez 2019-11-18 08:37:24 PST
(In reply to Chris Dumez from comment #12)
> (In reply to Truitt Savell from comment #11)
> > It looks like
> > fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html
> > and fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track.html
> > are still crashing
> 
> Odd, will look now although it would help to get a link.

I can reproduce the crash for fast/mediacapturefromelement/CanvasCaptureMediaStream-creation.html and will get a fix shortly.
Comment 15 Chris Dumez 2019-11-18 08:45:13 PST
Reopening for follow-up fix.
Comment 16 Chris Dumez 2019-11-18 08:47:30 PST
Created attachment 383751 [details]
Patch
Comment 17 WebKit Commit Bot 2019-11-18 09:34:41 PST
Comment on attachment 383751 [details]
Patch

Clearing flags on attachment: 383751

Committed r252545: <https://trac.webkit.org/changeset/252545>
Comment 18 WebKit Commit Bot 2019-11-18 09:34:43 PST
All reviewed patches have been landed.  Closing bug.