REGRESSION (r252497): Multiple mediacapturefromelement tests are crashing on mac debug https://bugs.webkit.org/show_bug.cgi?id=204267 <rdar://problem/57248130>

Reviewed by Alexey Proskuryakov.

Make sure the CanvasCaptureMediaStreamTrack factory function calls suspendIfNeeded()
since the class inhehits ActiveDOMObject.

* Modules/mediastream/CanvasCaptureMediaStreamTrack.cpp:
(WebCore::CanvasCaptureMediaStreamTrack::create):


Canonical link: https://commits.webkit.org/217559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252524 268f45cc-cd09-0410-ab3c-d52691b4dbfc